Cập nhật giao diện mới

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <a href="daily.html" class="header__navbar-agency">Đại lý</a>
                             </li>
                             <li class="header__navbar-item">
-                                <a href="" class="header__navbar-promotion">Khuyến mại</a>
+                                <a href="khuyenmai.html" class="header__navbar-promotion">Khuyến mãi</a>
                             </li>
                             <li class="header__navbar-item header__navbar-service">
                                 Dịch vụ
@@ -265,12 +265,12 @@
                             <h3>Khuyến mại & Dịch vụ</h3>
                             <div class="grid__row">
                                 <div class="grid__column-4">
-                                    <a href="" class="container__section-item">
+                                    <a href="khuyenmai.html" class="container__section-item">
                                         <div class="container__section-item-img" style="background-image: url(./assets/img/container__section--khuyenmai.webp);"></div>
                                     </a>    
                                         <h4 class="container__section-item-name">Khuyến mãi</h4>
                                         <span class="container__section-item-description">Cập nhật thông tin khuyến mãi và ưu đãi đặc biệt của các dòng xe theo tháng</span>
-                                        <a href="" class="container__section-item-link">
+                                        <a href="khuyenmai.html" class="container__section-item-link">
                                             <span class="container__section-item-link-info">Xem chi tiết</span>
                                             <i class="container__section-item-icon ti-arrow-right"></i>
                                         </a>
