--- a/khuyenmai.html
+++ b/khuyenmai.html
@@ -6,7 +6,7 @@
     <title>VLA Motions</title>
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./assets/css/daily.css">
+    <link rel="stylesheet" href="./assets/css/khuyenmai.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons-font/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -117,92 +117,37 @@
 
         <!-- Container -->
         <div class="container">
-            <div class="daily-container__background" style="background-image: url(./assets/img/daily_background-main-showroom.jpg);">
-                <h4>Showroom</h4>
-                <h5>Cửa hàng</h5>
-                <h6>AHQ</h6>
-            </div>
-
-            <h4 class="daily-container__heading">Showroom</h4>
+            <div class="khuyenmai-container__main-background" style="background-image: url(./assets/img/khuyenmai_main-background.jpeg);"></div>
             <div class="grid">
                 <div class="grid__row">
-                    <div class="grid__column-6">
-                        <div class="daily-container__showroom" style="background-image: url(./assets/img/daily_background-showroom1.jpg);"></div>
-                        <div class="daily-container__name">AHQ HUE</div>
-                        <div class="daily-container__info">
-                            <div class="daily-container__address">
-                                <i class="daily-container__address-icon ti-location-pin"></i>
-                                <span>Địa chỉ</span>
-                                <div class="daily-container__address-description">6/43 Trần Hưng Đạo, Quận Phú Xuân, Phường Đông Ba, thành phố Huế</div>
-                            </div>
-                            <div class="daily-container__time">
-                                <i class="daily-container__time-icon ti-timer"></i>
-                                <span>Thời gian làm việc</span>
-                                <div class="daily-container__time-work">
-                                    <div class="daily-container__time-shop">Cửa hàng: </div>
-                                    <div class="daily-container__time-shop-open">T2 – CN: 8:00 – 19:00</div>
-                                </div>
-                            </div>
-                            <div class="daily-container__hotline">
-                                <i class="daily-container__hotline-icon ti-mobile"></i>
-                                <span>Hotline liên hệ:</span>
-                                <div class="daily-container__hotline-info">
-                                    <div class="daily-container__hotline-name">Bộ phận kinh doanh:</div>
-                                    <div class="daily-container__hotline-number">0949 405 449</div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="grid__column-4">
+                        <a href="./khuyenmai_hondaCivic.html" class="khuyenmai-container__background" style="background-image: url(./assets/img/khuyenmai_background1.jpeg);"></a>
+                        <div class="khuyenmai-container__name">Kiến tạo chuẩn mực hoàn hảo</div>
+                        <div class="khuyenmai-container__description">Tách mình khỏi những chuẩn mực cố định, Honda Civic chuyển mình để bứt phá trong từng đường nét thiết kế và tính năng, kiến tạo nên những thành công mới cho chủ sở hữu</div>
+                        <a href="./khuyenmai_hondaCivic.html" class="khuyenmai-container__link">
+                            <span>Xem thêm</span>
+                            <i class="khuyenmai-container__icon ti-arrow-right"></i>
+                        </a>
                     </div>
-                    <div class="grid__column-6">
-                        <div class="daily-container__showroom" style="background-image: url(./assets/img/daily_background-showroom2.jpg);"></div>
-                        <div class="daily-container__name">AHQ DA NANG</div>
-                        <div class="daily-container__info">
-                            <div class="daily-container__address">
-                                <i class="daily-container__address-icon ti-location-pin"></i>
-                                <span>Địa chỉ</span>
-                                <div class="daily-container__address-description">05 Phạm Hùng, Hòa Châu, Hòa Vang, Đà Nẵng</div>
-                            </div>
-                            <div class="daily-container__time">
-                                <i class="daily-container__time-icon ti-timer"></i>
-                                <span>Thời gian làm việc</span>
-                                <div class="daily-container__time-work">
-                                    <div class="daily-container__time-shop">Cửa hàng: </div>
-                                    <div class="daily-container__time-shop-open">T2 – CN: 8:00 – 18:00</div>
-                                </div>
-                            </div>
-                            <div class="daily-container__hotline">
-                                <i class="daily-container__hotline-icon ti-mobile"></i>
-                                <span>Hotline liên hệ:</span>
-                                <div class="daily-container__hotline-info">
-                                    <div class="daily-container__hotline-name">Bộ phận kinh doanh:</div>
-                                    <div class="daily-container__hotline-number">0867 397 631</div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="grid__column-4">
+                        <a href="khuyenmai_yamahaR15V3.html" class="khuyenmai-container__background" style="background-image: url(./assets/img/khuyenmai_background2.jpeg);"></a>
+                        <div class="khuyenmai-container__name">Bắt trọn công nghệ</div>
+                        <div class="khuyenmai-container__description">Yamaha YZF-R15 là mẫu xe thể thao dung tích xy lanh 155cc, sở hữu những đường nét thừa hưởng DNA từ "đàn anh" YZF-R1. Xe được trang bị nhiều công nghệ hiện đại, hệ thống phun xăng điện tử và van biến thiên VVA giúp xe vừa tiết kiệm nhiên liệu, vừa phát huy được khả năng vận hành bền bỉ, đem lại các trải nghiệm phấn khích cho các tay lái.</div>
+                        <a href="khuyenmai_yamahaR15V3.html" class="khuyenmai-container__link">
+                            <span>Xem thêm</span>
+                            <i class="khuyenmai-container__icon ti-arrow-right"></i>
+                        </a>
+                    </div>
+                    <div class="grid__column-4">
+                        <a href="khuyenmai_hondash160i.html" class="khuyenmai-container__background" style="background-image: url(./assets/img/khuyenmai_background3.jpeg);"></a>
+                        <div class="khuyenmai-container__name">Đỉnh sắc độc tôn</div>
+                        <div class="khuyenmai-container__description">Kế thừa tinh hoa của dòng xe SH với những đường nét thanh lịch, sang trọng mang hơi thở Châu Âu cùng động cơ cải tiến đột phá và công nghệ tiên tiến, SH160i/125i mới sở hữu diện mạo đầy ấn tượng và nổi bật.</div>
+                        <a href="khuyenmai_hondash160i.html" class="khuyenmai-container__link">
+                            <span>Xem thêm</span>
+                            <i class="khuyenmai-container__icon ti-arrow-right"></i>
+                        </a>
                     </div>
                 </div>
-            </div>
-
-            <div class="daily-container__contact">
-                <h4 class="daily-container__contact-heading">Liên hệ</h4>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Họ tên *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập tên" type="text">
-                </div>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Số điện thoại *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập số điện thoại" type="text">
-                </div>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Email *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập email" type="text">
-                </div>
-                <div class="daily-container__contact-content">
-                    <div class="daily-container__contact-tag">Nội dung *</div>
-                    <textarea class="daily-container__content-input" placeholder="Nhập nội dung" rows="5"></textarea>
-                </div>
-                <h6 class="daily-container__contact-commit">Bằng cách gửi biểu mẫu này, tôi đồng ý các điều khoản về Chính sách bảo mật và thông tin cá nhân của AHQ VietNam.</h6>
-                <button class="daily-container__contact-btn">Gửi ngay</button>
             </div>
         </div>
 
