--- a/khuyenmai_hondaCivic.html
+++ b/khuyenmai_hondaCivic.html
@@ -6,7 +6,7 @@
     <title>VLA Motions</title>
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./assets/css/daily.css">
+    <link rel="stylesheet" href="./assets/css/khuyenmai_hondaCivic.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons-font/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -116,94 +116,81 @@
         </div>
 
         <!-- Container -->
-        <div class="container">
-            <div class="daily-container__background" style="background-image: url(./assets/img/daily_background-main-showroom.jpg);">
-                <h4>Showroom</h4>
-                <h5>Cửa hàng</h5>
-                <h6>AHQ</h6>
-            </div>
-
-            <h4 class="daily-container__heading">Showroom</h4>
-            <div class="grid">
-                <div class="grid__row">
-                    <div class="grid__column-6">
-                        <div class="daily-container__showroom" style="background-image: url(./assets/img/daily_background-showroom1.jpg);"></div>
-                        <div class="daily-container__name">AHQ HUE</div>
-                        <div class="daily-container__info">
-                            <div class="daily-container__address">
-                                <i class="daily-container__address-icon ti-location-pin"></i>
-                                <span>Địa chỉ</span>
-                                <div class="daily-container__address-description">6/43 Trần Hưng Đạo, Quận Phú Xuân, Phường Đông Ba, thành phố Huế</div>
-                            </div>
-                            <div class="daily-container__time">
-                                <i class="daily-container__time-icon ti-timer"></i>
-                                <span>Thời gian làm việc</span>
-                                <div class="daily-container__time-work">
-                                    <div class="daily-container__time-shop">Cửa hàng: </div>
-                                    <div class="daily-container__time-shop-open">T2 – CN: 8:00 – 19:00</div>
-                                </div>
-                            </div>
-                            <div class="daily-container__hotline">
-                                <i class="daily-container__hotline-icon ti-mobile"></i>
-                                <span>Hotline liên hệ:</span>
-                                <div class="daily-container__hotline-info">
-                                    <div class="daily-container__hotline-name">Bộ phận kinh doanh:</div>
-                                    <div class="daily-container__hotline-number">0949 405 449</div>
-                                </div>
-                            </div>
-                        </div>
+        <div class="container container_khuyenmai">
+            <div class="khuyenmai_hondaCivic-container-main-background" style="background-image: url(./assets/img/khuyenmai-hondCivic_main-background.jpg);"></div>
+            <h4 class="khuyenmai_hondaCivic-heading">Hè trọn niềm vui, lăn bánh khắp cung đường cùng honda Civic</h4>
+            <div class="khuyenmai_hondaCivic-heading-description">Cập nhật chương trình giảm giá và khuyến mãi Honda Civic trong tháng 06/2025, Honda Civic RS giảm 50 triệu tặng 1 năm bảo hiểm thân vỏ.</div>
+            <div class="khuyenmai_hondaCivic-info">
+                <h5 class="khuyenmai_hondaCivic-name">Honda Civic RS</h5>
+                <div class="khuyenmai_hondaCivic-description">Honda Civic RS sử dụng động Turbo 1.5L sản sinh công suất tối đa 174 mã lực, trang bị đầy đủ tiện ích cao cấp như công  nghệ kết nối xe và điện thoại qua ứng dụng Honda Connect, hệ thống 12 loa Bose, công nghệ an toàn Honda Sensing.</div>
+                <div class="khuyenmai_hondaCivic-table-price">Bảng giá lăn bánh Honda Civic RS</div>
+                <ul class="khuyenmai_hondaCivic-table-price-list">
+                    <li class="khuyenmai_hondaCivic-table-price-item-name">Giá niêm yết</li>
+                    <li class="khuyenmai_hondaCivic-table-price-item">	889,000,000 VNĐ</li>
+                </ul>
+                <ul class="khuyenmai_hondaCivic-table-price-list">
+                    <li class="khuyenmai_hondaCivic-table-price-item-name">Giá lăn bánh Tp HCM</li>
+                    <li class="khuyenmai_hondaCivic-table-price-item">1,000,085,000 VNĐ</li>
+                </ul>
+                <ul class="khuyenmai_hondaCivic-table-price-list">
+                    <li class="khuyenmai_hondaCivic-table-price-item-name">Giá lăn bánh Hà Nội</li>
+                    <li class="khuyenmai_hondaCivic-table-price-item">1,017,685,000 VNĐ</li>
+                </ul>
+                <ul class="khuyenmai_hondaCivic-table-price-list">
+                    <li class="khuyenmai_hondaCivic-table-price-item-name">Giá lăn bánh Tỉnh</li>
+                    <li class="khuyenmai_hondaCivic-table-price-item">981,035,000 VNĐ</li>
+                </ul>
+                <div class="khuyenmai_hondaCivic-table-price">ƯU ĐÃI CỰC KỲ HẤP DẪN TRONG THÁNG 6/2025</div>
+                
+                <div class="khuyenmai_hondaCivic-table-price-sale-of">
+                    <div class="khuyenmai_hondaCivic-table-price-sale-of-heading">
+                        <h5>GIẢM TIỀN MẶT</h5>
+                        <h5>QUÀ TẶNG TÙY CHỌN</h5>
                     </div>
-                    <div class="grid__column-6">
-                        <div class="daily-container__showroom" style="background-image: url(./assets/img/daily_background-showroom2.jpg);"></div>
-                        <div class="daily-container__name">AHQ DA NANG</div>
-                        <div class="daily-container__info">
-                            <div class="daily-container__address">
-                                <i class="daily-container__address-icon ti-location-pin"></i>
-                                <span>Địa chỉ</span>
-                                <div class="daily-container__address-description">05 Phạm Hùng, Hòa Châu, Hòa Vang, Đà Nẵng</div>
-                            </div>
-                            <div class="daily-container__time">
-                                <i class="daily-container__time-icon ti-timer"></i>
-                                <span>Thời gian làm việc</span>
-                                <div class="daily-container__time-work">
-                                    <div class="daily-container__time-shop">Cửa hàng: </div>
-                                    <div class="daily-container__time-shop-open">T2 – CN: 8:00 – 18:00</div>
-                                </div>
-                            </div>
-                            <div class="daily-container__hotline">
-                                <i class="daily-container__hotline-icon ti-mobile"></i>
-                                <span>Hotline liên hệ:</span>
-                                <div class="daily-container__hotline-info">
-                                    <div class="daily-container__hotline-name">Bộ phận kinh doanh:</div>
-                                    <div class="daily-container__hotline-number">0867 397 631</div>
-                                </div>
-                            </div>
+                    <div class="khuyenmai_hondaCivic-table-price-sale-of-info">
+                        <div class="khuyenmai_hondaCivic-table-price-sale-of-name">
+                            <span>GIẢM TIỀN MẶT HẤP DẪN</span>
+                            <span>Qúy khách vui lòng liên hệ 0949.405.449</span> 
                         </div>
+                        <ul class="khuyenmai_hondaCivic-table-price-sale-of-list">
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Gói bảo hiểm vật chất xe 1 năm
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Dán phim cách nhiệt kính xe
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Camera hành trình
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Thảm sàn
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Nẹp bước chân
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Trải cốp
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Gói bảo hiểm vật chất xe 1 năm
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Gói bảo hiểm vật chất xe 1 năm
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Gói bảo hiểm vật chất xe 1 năm
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Gói bảo hiểm vật chất xe 1 năm
+                            </li>
+                            <li class="khuyenmai_hondaCivic-table-price-sale-of-item">
+                                Gói bảo hiểm vật chất xe 1 năm
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-
-            <div class="daily-container__contact">
-                <h4 class="daily-container__contact-heading">Liên hệ</h4>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Họ tên *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập tên" type="text">
-                </div>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Số điện thoại *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập số điện thoại" type="text">
-                </div>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Email *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập email" type="text">
-                </div>
-                <div class="daily-container__contact-content">
-                    <div class="daily-container__contact-tag">Nội dung *</div>
-                    <textarea class="daily-container__content-input" placeholder="Nhập nội dung" rows="5"></textarea>
-                </div>
-                <h6 class="daily-container__contact-commit">Bằng cách gửi biểu mẫu này, tôi đồng ý các điều khoản về Chính sách bảo mật và thông tin cá nhân của AHQ VietNam.</h6>
-                <button class="daily-container__contact-btn">Gửi ngay</button>
-            </div>
+            <div class="khuyenmai_hondaCivic-container-last-background" style="background-image: url(./assets/img/khuyenmai-hondCivic-background.jpg);"></div>
         </div>
 
 
