--- a/khuyenmai_hondash160i.html
+++ b/khuyenmai_hondash160i.html
@@ -6,7 +6,7 @@
     <title>VLA Motions</title>
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./assets/css/daily.css">
+    <link rel="stylesheet" href="./assets/css/khuyenmai_hondash160i.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons-font/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -116,96 +116,63 @@
         </div>
 
         <!-- Container -->
-        <div class="container">
-            <div class="daily-container__background" style="background-image: url(./assets/img/daily_background-main-showroom.jpg);">
-                <h4>Showroom</h4>
-                <h5>Cửa hàng</h5>
-                <h6>AHQ</h6>
+        <div class="container container_khuyenmai">
+            <div class="khuyenmai_hondash160i-container-main-background" style="background-image: url(./assets/img/khuyenmai-hondash160i_main-background.jpg);"></div>
+            <h4 class="khuyenmai_hondash160i-heading">ĐẲNG CẤP XE MỚI, PHONG ĐỘ LÊN NGÔI</h4>
+            <div class="khuyenmai_hondash160i-info">
+                    <h5 class="khuyenmai_honda160i-name">Honda SH160i</h5>
+                    <div class="khuyenmai_honda160i-description">Honda SH 160i là mẫu xe tay ga cao cấp, biểu tượng của phong cách sống hiện đại và thành công. Thiết kế thanh lịch, mang hơi thở châu Âu với những đường nét tinh tế, sang trọng. Xe được trang bị động cơ eSP+ 4 van 157cc mạnh mẽ, tiết kiệm nhiên liệu, vận hành êm ái. SH 160i còn tích hợp nhiều công nghệ tiên tiến như hệ thống chống bó cứng phanh ABS, kiểm soát lực kéo HSTC và khóa thông minh Smart Key, mang đến trải nghiệm lái xe an toàn và tiện nghi.</div>
+            </div>
+            <div class="khuyenmai_hondash160i-info">
+                <div class="khuyenmai_hondash160i-title">TRẢ GÓP 0% - QUÀ XỊN GIÁ TỐT</div>
+                <div class="khuyenmai_hondash160i-title-description">Tháng 7 này, HEAD Giáp Bình Dương mang đến chương trình ưu đãi đặc biệt dành cho khách hàng: thu xe cũ không cần bù tiền, giảm giá xe mới, trả góp 0% và hàng loạt quà tặng giá trị.</div>
+            </div>
+            <div class="khuyenmai_hondash160i-content">
+                <div class="khuyenmai_hondash160i-content-header">
+                    <div class="khuyenmai_hondash160i-content-info">Thời gian áp dụng:</div>
+                    <div class="khuyenmai_hondash160i-content-time">Từ 15/07/2025 đến hết 15/08/2025</div>
+                </div>
+                <div class="khuyenmai_hondash160i-content-check-list">Check-list Ưu Đãi Tháng 7:</div>
+                <ul class="khuyenmai_hondash160i-content-list">
+                    <li class="khuyenmai_hondash160i-content-item">
+                        Giảm giá xe: Có
+                    </li>
+                    <li class="khuyenmai_hondash160i-content-item">
+                        Thu xe cũ - đổi xe mới  
+                        <span>Không cần bù tiền</span>
+                    </li>
+                    <li class="khuyenmai_hondash160i-content-item">
+                       Trả góp 0% lãi suất: CÓ
+                    </li>
+                    <li class="khuyenmai_hondash160i-content-item">
+                        Quà tặng hấp dẫn: CỰC NHIỀU
+                    </li>
+                </ul> 
             </div>
 
-            <h4 class="daily-container__heading">Showroom</h4>
-            <div class="grid">
-                <div class="grid__row">
-                    <div class="grid__column-6">
-                        <div class="daily-container__showroom" style="background-image: url(./assets/img/daily_background-showroom1.jpg);"></div>
-                        <div class="daily-container__name">AHQ HUE</div>
-                        <div class="daily-container__info">
-                            <div class="daily-container__address">
-                                <i class="daily-container__address-icon ti-location-pin"></i>
-                                <span>Địa chỉ</span>
-                                <div class="daily-container__address-description">6/43 Trần Hưng Đạo, Quận Phú Xuân, Phường Đông Ba, thành phố Huế</div>
-                            </div>
-                            <div class="daily-container__time">
-                                <i class="daily-container__time-icon ti-timer"></i>
-                                <span>Thời gian làm việc</span>
-                                <div class="daily-container__time-work">
-                                    <div class="daily-container__time-shop">Cửa hàng: </div>
-                                    <div class="daily-container__time-shop-open">T2 – CN: 8:00 – 19:00</div>
-                                </div>
-                            </div>
-                            <div class="daily-container__hotline">
-                                <i class="daily-container__hotline-icon ti-mobile"></i>
-                                <span>Hotline liên hệ:</span>
-                                <div class="daily-container__hotline-info">
-                                    <div class="daily-container__hotline-name">Bộ phận kinh doanh:</div>
-                                    <div class="daily-container__hotline-number">0949 405 449</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid__column-6">
-                        <div class="daily-container__showroom" style="background-image: url(./assets/img/daily_background-showroom2.jpg);"></div>
-                        <div class="daily-container__name">AHQ DA NANG</div>
-                        <div class="daily-container__info">
-                            <div class="daily-container__address">
-                                <i class="daily-container__address-icon ti-location-pin"></i>
-                                <span>Địa chỉ</span>
-                                <div class="daily-container__address-description">05 Phạm Hùng, Hòa Châu, Hòa Vang, Đà Nẵng</div>
-                            </div>
-                            <div class="daily-container__time">
-                                <i class="daily-container__time-icon ti-timer"></i>
-                                <span>Thời gian làm việc</span>
-                                <div class="daily-container__time-work">
-                                    <div class="daily-container__time-shop">Cửa hàng: </div>
-                                    <div class="daily-container__time-shop-open">T2 – CN: 8:00 – 18:00</div>
-                                </div>
-                            </div>
-                            <div class="daily-container__hotline">
-                                <i class="daily-container__hotline-icon ti-mobile"></i>
-                                <span>Hotline liên hệ:</span>
-                                <div class="daily-container__hotline-info">
-                                    <div class="daily-container__hotline-name">Bộ phận kinh doanh:</div>
-                                    <div class="daily-container__hotline-number">0867 397 631</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <ul class="khuyenmai_hondash160i-gift">
+                <div class="khuyenmai_hondash160i-gift-name">Các phần quà khác</div>
+                <span>Khách hàng được nhận 2 trong các phần quà dưới đây</span>
+                <ul class="khuyenmai_hondash160i-gift-list">
+                    <li class="khuyenmai_hondash160i-gift-item">
+                        Tai nghe Samsung chính hãng
+                    </li>
+                    <li class="khuyenmai_hondash160i-gift-item">
+                        Voucher phụ kiện trị giá 1.600.000 VNĐ
+                    </li>
+                    <li class="khuyenmai_hondash160i-gift-item">
+                        Dán decal bảo vệ xe trị giá 2.000.000 VNĐ
+                    </li>
+                    <li class="khuyenmai_hondash160i-gift-item">
+                        Miễn phí thay nhớt trong vòng 1 năm
+                    </li>
+                    <li class="khuyenmai_hondash160i-gift-item">
+                        Thẻ quà tặng trị giá 1.500.000 cho dịch vụ bảo dưỡng 
+                    </li>
+                </ul>
             </div>
 
-            <div class="daily-container__contact">
-                <h4 class="daily-container__contact-heading">Liên hệ</h4>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Họ tên *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập tên" type="text">
-                </div>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Số điện thoại *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập số điện thoại" type="text">
-                </div>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Email *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập email" type="text">
-                </div>
-                <div class="daily-container__contact-content">
-                    <div class="daily-container__contact-tag">Nội dung *</div>
-                    <textarea class="daily-container__content-input" placeholder="Nhập nội dung" rows="5"></textarea>
-                </div>
-                <h6 class="daily-container__contact-commit">Bằng cách gửi biểu mẫu này, tôi đồng ý các điều khoản về Chính sách bảo mật và thông tin cá nhân của AHQ VietNam.</h6>
-                <button class="daily-container__contact-btn">Gửi ngay</button>
-            </div>
         </div>
-
 
         <!-- Footer -->
         <div class="footer">
