--- a/khuyenmai_yamahaR15V3.html
+++ b/khuyenmai_yamahaR15V3.html
@@ -6,7 +6,7 @@
     <title>VLA Motions</title>
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./assets/css/daily.css">
+    <link rel="stylesheet" href="./assets/css/khuyenmai_yamahaR15V3.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons-font/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -116,93 +116,32 @@
         </div>
 
         <!-- Container -->
-        <div class="container">
-            <div class="daily-container__background" style="background-image: url(./assets/img/daily_background-main-showroom.jpg);">
-                <h4>Showroom</h4>
-                <h5>Cửa hàng</h5>
-                <h6>AHQ</h6>
+        <div class="container container_khuyenmai">
+            <div class="khuyenmai_yamahar15v3-container-main-background" style="background-image: url(./assets/img/khuyenmai-yamahaR15V3_main-background.jpg);"></div>
+            <h4 class="khuyenmai_yamahar15v3-heading">Thách thức mọi giới hạn</h4>
+            <div class="khuyenmai_yamahar15v3-info">
+                <h5 class="khuyenmai_yamahar15v3-name">Yamaha YZF-R15</h5>
+                <div class="khuyenmai_yamahar15v3-description">Nếu bạn là người có niềm đam mê mãnh liệt mới các dòng xe thê thao, thì chiếc YZF-R15 là một sự lựa chọn tối ưu dành cho bạn. Với động cơ 155cc mạnh mẽ nhất phân khúc, thiết kế thuần sport nhất và được trang bị rất nhiều công nghệ hỗ trợ người lái, chiếc R15 chắc chắn sẽ là một bước khởi đầu hoàn hảo trên hành trình chinh phục đam mê của bạn.</div>
             </div>
-
-            <h4 class="daily-container__heading">Showroom</h4>
-            <div class="grid">
-                <div class="grid__row">
-                    <div class="grid__column-6">
-                        <div class="daily-container__showroom" style="background-image: url(./assets/img/daily_background-showroom1.jpg);"></div>
-                        <div class="daily-container__name">AHQ HUE</div>
-                        <div class="daily-container__info">
-                            <div class="daily-container__address">
-                                <i class="daily-container__address-icon ti-location-pin"></i>
-                                <span>Địa chỉ</span>
-                                <div class="daily-container__address-description">6/43 Trần Hưng Đạo, Quận Phú Xuân, Phường Đông Ba, thành phố Huế</div>
-                            </div>
-                            <div class="daily-container__time">
-                                <i class="daily-container__time-icon ti-timer"></i>
-                                <span>Thời gian làm việc</span>
-                                <div class="daily-container__time-work">
-                                    <div class="daily-container__time-shop">Cửa hàng: </div>
-                                    <div class="daily-container__time-shop-open">T2 – CN: 8:00 – 19:00</div>
-                                </div>
-                            </div>
-                            <div class="daily-container__hotline">
-                                <i class="daily-container__hotline-icon ti-mobile"></i>
-                                <span>Hotline liên hệ:</span>
-                                <div class="daily-container__hotline-info">
-                                    <div class="daily-container__hotline-name">Bộ phận kinh doanh:</div>
-                                    <div class="daily-container__hotline-number">0949 405 449</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid__column-6">
-                        <div class="daily-container__showroom" style="background-image: url(./assets/img/daily_background-showroom2.jpg);"></div>
-                        <div class="daily-container__name">AHQ DA NANG</div>
-                        <div class="daily-container__info">
-                            <div class="daily-container__address">
-                                <i class="daily-container__address-icon ti-location-pin"></i>
-                                <span>Địa chỉ</span>
-                                <div class="daily-container__address-description">05 Phạm Hùng, Hòa Châu, Hòa Vang, Đà Nẵng</div>
-                            </div>
-                            <div class="daily-container__time">
-                                <i class="daily-container__time-icon ti-timer"></i>
-                                <span>Thời gian làm việc</span>
-                                <div class="daily-container__time-work">
-                                    <div class="daily-container__time-shop">Cửa hàng: </div>
-                                    <div class="daily-container__time-shop-open">T2 – CN: 8:00 – 18:00</div>
-                                </div>
-                            </div>
-                            <div class="daily-container__hotline">
-                                <i class="daily-container__hotline-icon ti-mobile"></i>
-                                <span>Hotline liên hệ:</span>
-                                <div class="daily-container__hotline-info">
-                                    <div class="daily-container__hotline-name">Bộ phận kinh doanh:</div>
-                                    <div class="daily-container__hotline-number">0867 397 631</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="khuyenmai_yamahar15v3-table-price">Giá xe YAMAHA R15V3</div>
+            <ul class="khuyenmai_yamahar15v3-table-price-list">
+                <li class="khuyenmai_yamahar15v3-table-price-item-name">Hãng đề xuất</li>
+                <li class="khuyenmai_yamahar15v3-table-price-item">70.000.000 VNĐ</li>
+            </ul>
+            <ul class="khuyenmai_yamahar15v3-table-price-list">
+                <li class="khuyenmai_yamahar15v3-table-price-item-name">Giá đại lý</li>
+                <li class="khuyenmai_yamahar15v3-table-price-item">65.000.000 VNĐ</li>
+            </ul>
+            <ul class="khuyenmai_yamahar15v3-table-price-list">
+                <li class="khuyenmai_yamahar15v3-table-price-item-name">Giá khuyến mãi chào hè</li>
+                <li class="khuyenmai_yamahar15v3-table-price-item">60.990.000 VNĐ</li>
+            </ul>
+            <div class="khuyenmai_yamahar15v3-guarantee">
+                <span>Thời gian bảo hành: </span>
+                <div class="khuyenmai_yamahar15v3-guarantee-table">
+                    <div class="khuyenmai_yamahar15v3-guarantee-time-true">5 năm hoặc đạt 50.000km (Tùy điều kiện nào đạt trước)</div>
+                    <div class="khuyenmai_yamahar15v3-guarantee-time">3 năm hoặc đạt 30.000km (Tùy điều kiện nào đạt trước)</div>
                 </div>
-            </div>
-
-            <div class="daily-container__contact">
-                <h4 class="daily-container__contact-heading">Liên hệ</h4>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Họ tên *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập tên" type="text">
-                </div>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Số điện thoại *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập số điện thoại" type="text">
-                </div>
-                <div class="daily-container__contact-info">
-                    <div class="daily-container__contact-tag">Email *</div>
-                    <input class="daily-container__contact-input" placeholder="Nhập email" type="text">
-                </div>
-                <div class="daily-container__contact-content">
-                    <div class="daily-container__contact-tag">Nội dung *</div>
-                    <textarea class="daily-container__content-input" placeholder="Nhập nội dung" rows="5"></textarea>
-                </div>
-                <h6 class="daily-container__contact-commit">Bằng cách gửi biểu mẫu này, tôi đồng ý các điều khoản về Chính sách bảo mật và thông tin cá nhân của AHQ VietNam.</h6>
-                <button class="daily-container__contact-btn">Gửi ngay</button>
             </div>
         </div>
 
